# advent2020

./: .gitignore  pyproject.toml
1/: expenses.py  expenses_test.py
10/: adapters.py  adapters_test.py
11/: seats_part1.py  seats_part2.py  seats_test.py
12/: ferry_part1.py  ferry_part2.py  ferry_test.py
2/: password_check.py  password_check_test.py
3/: test_trees.py  trees.py
4/: passport.py  test_passport.py
5/: seats.py  seats_test.py
6/: customs.py  customs_test.py
7/: bags.py  bags_test.py
8/: emulator.py  emulator_test.py
9/: cypher.py  cypher_test.py
