[tool.poetry]
name = "advent2020"
version = "1.0.0"
description = "Solutions to Advent of Code 2020"
authors = ["Sam Nordlinger <19315410+SNordlinger@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
yapf = "^0.30.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
